--- a/enjoy/enjoy.css
+++ b/enjoy/enjoy.css
@@ -7,6 +7,11 @@ body {
 	color:#444;
 	background:#FAF9F5;
 }
+#movies {
+	text-align:center;
+	margin-left:auto;
+	margin-right:auto;
+}
 ul {
 	margin:0 0 0 -24px;
 }
