--- a/shengbin.css
+++ b/shengbin.css
@@ -1,27 +1,118 @@
 body {
-	max-width: 900px;
-    font-size: 13px;
-    font-family: "微软雅黑";
-	background: #FAF9F5;
-    margin: auto;
+    margin:0;
+    background: #FAF9F5;
 }
-.content h1 {
-	line-height: 32px;
-	font-size: 24px;
+
+header {
+    background-color:#333;
+}
+header p {
+    float:right;
+    position:relative;
+    margin:0 10px 0 0;
+}
+
+nav ul, nav ul ul {
+    list-style:none;
+    margin:0;
+    padding:0;
+}
+nav ul ul {
+    height:0;
+    left:0;
+    overflow:hidden;
+    position:absolute;
+    top:32px;
+}
+nav ul li {
+    float:left;
+    position:relative;
+    width:100px;
+}
+nav ul li a, header p{
+    -moz-transition:0.5s;
+    -o-transition:0.5s;
+    -webkit-transition:0.5s;
+    background-color:#333;
+    border:0px solid #222;
+    color:#FFF;
+    display:block;
+    line-height:32px;
+    text-align:center;
+    text-decoration:none;
+    transition:0.5s;
+}
+nav ul li:hover > a {
+    background:#111;
+    border-color:#111;
+    color:#FFF;
+}
+nav ul li:hover ul.subs {
+    height:auto;
+    width:100px;
+}
+nav ul ul li {
+    -moz-transition:0.5s;
+    -o-transition:0.5s;
+    -webkit-transition:0.5s;
+    opacity:0;
+    transition:0.5s;
+    width:100%;
+}
+nav ul li ul li {
+    -moz-transition-delay:0s;
+    -o-transition-delay:0s;
+    -webkit-transition-delay:0s;
+    transition-delay:0s;
+}
+nav ul li:hover ul li {
+    opacity:1;
+    -moz-transition-delay:0.5s;
+    -o-transition-delay:0.5s;
+    -webkit-transition-delay:0.5s;
+    transition-delay:0.5s;
+}
+nav ul ul li a {
+    background:#333;
+    border-color:#222;
+    color:#fff;
+    line-height:1px;
+    -moz-transition:1.5s;
+    -o-transition:1.5s;
+    -webkit-transition:1.5s;
+    transition:1.5s;
+}
+nav ul li:hover ul li a {
+    line-height:35px;
+}
+nav ul ul li a:hover {
+    background:#111;
+    background-image: -webkit-gradient(linear, 0% 0%, 0% 95%, from(rgba(255, 255, 255, 0.5)), to(rgba(255, 255, 255, 0)));
+    background-image: -moz-linear-gradient(-90deg, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0));
+    background-image: -o-linear-gradient(-90deg,rgba(255,255,255,0.5),rgba(255,255,25,0));
+}
+
+h1 {
+    text-align:center;
+}
+
+main {
+    max-width:900px;
+    margin: auto;
+	font-family: "微软雅黑", "Microsoft YaHei";
+}
+
+#about h1 {
 	background: #333;
 	color: white;
-	text-align: center;
 }
-.content table {
+#about table {
 	border: 1px solid #888;
     border-collapse: collapse;
-	text-indent: 24px;
 }
-
-.content table td {
+#about table td {
     vertical-align: top;
 	width: 50%;
-	border: 1px solid #888;
-	padding: 10px;
-
+	border-right: 1px solid #888;
+	padding-left: 20px;
 }
