--- a/shengbin.css
+++ b/shengbin.css
@@ -1,57 +1,57 @@
 body {
-    margin:0;
+    margin: 0;
     background: #FAF9F5;
 	font-family: "微软雅黑", "Microsoft YaHei", Arial, Helvetica, sans-serif;
 	line-height: 1.5;
 }
 
 .header {
-    background-color:#333;
+    background-color: #333;
 }
 .header p {
-    float:right;
-    position:relative;
-    margin:0 10px 0 0;
+    float: right;
+    position: relative;
+    margin: 0 10px 0 0;
 }
 
 .nav ul, .nav ul ul {
-    list-style:none;
-    margin:0;
-    padding:0;
+    list-style: none;
+    margin: 0;
+    padding: 0;
 }
 .nav ul ul {
-    height:0;
-    left:0;
-    overflow:hidden;
-    position:absolute;
-    top:32px;
+    height: 0;
+    left: 0;
+    overflow: hidden;
+    position: absolute;
+    top: 32px;
 }
 .nav ul li {
-    float:left;
-    position:relative;
-    width:100px;
+    float: left;
+    position: relative;
+    width: 100px;
 }
 .nav ul li a, .header p{
-    -moz-transition:0.5s;
-    -o-transition:0.5s;
-    -webkit-transition:0.5s;
-    background-color:#333;
-    border:0px solid #222;
-    color:#FFF;
-    display:block;
-    line-height:32px;
-    text-align:center;
-    text-decoration:none;
-    transition:0.5s;
+    -moz-transition: 0.5s;
+    -o-transition: 0.5s;
+    -webkit-transition: 0.5s;
+    background-color: #333;
+    border: 0px solid #222;
+    color: #FFF;
+    display: block;
+    line-height: 32px;
+    text-align: center;
+    text-decoration: none;
+    transition: 0.5s;
 }
 .nav ul li:hover > a {
-    background:#111;
-    border-color:#111;
-    color:#FFF;
+    background: #111;
+    border-color: #111;
+    color: #FFF;
 }
 .nav ul li:hover ul.subs {
-    height:auto;
-    width:100px;
+    height: auto;
+    width: 100px;
 }
 .parent:after {
 	content: '\00a0\25be';
@@ -59,53 +59,60 @@ body {
 }
 
 .nav ul ul li {
-    -moz-transition:0.5s;
-    -o-transition:0.5s;
-    -webkit-transition:0.5s;
-    opacity:0;
-    transition:0.5s;
-    width:100%;
+    -moz-transition: 0.5s;
+    -o-transition: 0.5s;
+    -webkit-transition: 0.5s;
+    opacity: 0;
+    transition: 0.5s;
+    width: 100%;
 }
 .nav ul li ul li {
-    -moz-transition-delay:0s;
-    -o-transition-delay:0s;
-    -webkit-transition-delay:0s;
-    transition-delay:0s;
+    -moz-transition-delay: 0s;
+    -o-transition-delay: 0s;
+    -webkit-transition-delay: 0s;
+    transition-delay: 0s;
 }
 .nav ul li:hover ul li {
-    opacity:1;
-    -moz-transition-delay:0.1s;
-    -o-transition-delay:0.1s;
-    -webkit-transition-delay:0.1s;
-    transition-delay:0.1s;
+    opacity: 1;
+    -moz-transition-delay: 0.1s;
+    -o-transition-delay: 0.1s;
+    -webkit-transition-delay: 0.1s;
+    transition-delay: 0.1s;
 }
 .nav ul ul li a {
-    background:#333;
-    border-color:#222;
-    color:#fff;
-    line-height:1px;
-    -moz-transition:0.5s;
-    -o-transition:0.5s;
-    -webkit-transition:0.5s;
-    transition:0.5s;
+    background: #333;
+    border-color: #222;
+    color: #fff;
+    line-height: 1px;
+    -moz-transition: 0.5s;
+    -o-transition: 0.5s;
+    -webkit-transition: 0.5s;
+    transition: 0.5s;
 }
 .nav ul li:hover ul li a {
-    line-height:35px;
+    line-height: 35px;
 }
 .nav ul ul li a:hover {
-    background:#111;
+    background: #111;
     background-image: -webkit-gradient(linear, 0% 0%, 0% 95%, from(rgba(255, 255, 255, 0.5)), to(rgba(255, 255, 255, 0)));
     background-image: -moz-linear-gradient(-90deg, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0));
     background-image: -o-linear-gradient(-90deg,rgba(255,255,255,0.5),rgba(255,255,25,0));
 }
 
 h1 {
-    text-align:center;
+    text-align: center;
 }
 
 .main {
-    max-width:900px;
+    max-width: 900px;
     margin: auto;
+}
+
+.footer {
+    max-width: 900px;
+    margin: auto;
+	padding-top: 20px;
+	padding-bottom: 20px;
 }
 
 #about h1 {
