--- a/wedding/combo.css
+++ b/wedding/combo.css
@@ -513,6 +513,14 @@ html { box-sizing: border-box; }
   
   
   
+  nav .p-note { border-color: #f8f8f8; }
+  #note { background-color: #f8f8f8 !important; color: #111111; }
+  #note a { color: #111111; }
+  #note .sectiondivider { color: #f8f8f8; }
+
+  
+  
+  
   nav .p-photos { border-color: #49a7e9; }
   #photos { background-color: #49a7e9 !important; color: #f8f8f8; }
   #photos a { color: #f8f8f8; }
