Change navigation bar items

--- a/_layouts/app.html
+++ b/_layouts/app.html
@@ -44,8 +44,7 @@
                 <li><a href="/enjoy/movies.html">Movies</a></li>
             </ul>
         </li>
-        <li><a class="external" href="http://xiangce.baidu.com/shengbinmeng">Photos</a></li>
-        <li><a class="external" href="http://medium.com/@shengbinmeng">Medium</a></li>
+        <li><a class="external" href="https://verse.shengbin.me">Verse</a></li>
     </ul>
     </div>
     <p>Welcome<script language="javascript"> var now = new Date(); 
