Update the app layout to match default

--- a/_layouts/app.html
+++ b/_layouts/app.html
@@ -28,19 +28,20 @@
     <div class="nav">
     <ul>
         <li><a href="/">Home</a></li>
-        <li><a href="/apps">Apps</a>
+        <li><a href="/apps/">Apps</a>
             <ul class="subs">
-                <li><a href="/apps/ipgateway">IPGateway</a></li>
-                <li><a href="/apps/unibbs">UniBBS</a></li>
-                <li><a href="/apps/chisha">ChiSha</a></li>
+                <li><a href="/apps/ipgateway/">IPGateway</a></li>
+                <li><a href="/apps/unibbs/">UniBBS</a></li>
+                <li><a href="/apps/chisha/">ChiSha</a></li>
+                <li><a href="/apps/baidu-it-for-you/">Baidu It</a></li>
                 <li><a class="external" href="http://shengbin.sinaapp.com">SAE Apps</a></li>
             </ul>
         </li>
-        <li><a href="/enjoy">Enjoy</a>
+        <li><a href="/enjoy/">Enjoy</a>
             <ul class="subs">
-                <li><a href="/enjoy/reading.html">Reading</a></li>
-                <li><a href="/enjoy/music.html">Music</a></li>
-                <li><a href="/enjoy/movies.html">Movies</a></li>
+                <li><a href="/enjoy/reading">Reading</a></li>
+                <li><a href="/enjoy/music">Music</a></li>
+                <li><a href="/enjoy/movies">Movies</a></li>
             </ul>
         </li>
         <li><a class="external" href="http://blog.shengbin.me">Blog</a></li>
