Replace a navigation item

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,8 +43,8 @@
                 <li><a href="/enjoy/movies">Movies</a></li>
             </ul>
         </li>
+        <li><a href="/poems/">Poems</a></li>
         <li><a class="external" href="http://blog.shengbin.me">Blog</a></li>
-        <li><a class="external" href="https://verse.shengbin.me">Verse</a></li>
     </ul>
     </div>
     <p>Welcome<script language="javascript"> var now = new Date(); 
