Replace blog link with CV in menu bar

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,7 +44,7 @@
             </ul>
         </li>
         <li><a href="/poems/">Poems</a></li>
-        <li><a class="external" href="http://blog.shengbin.me">Blog</a></li>
+        <li><a href="/cv/">CV</a></li>
     </ul>
     </div>
     <p>Welcome<script language="javascript"> var now = new Date(); 
