--- a/_layouts/app.html
+++ b/_layouts/app.html
@@ -37,15 +37,8 @@
                 <li><a class="external" href="http://shengbin.sinaapp.com">SAE Apps</a></li>
             </ul>
         </li>
-        <li><a href="/enjoy/">Enjoy</a>
-            <ul class="subs">
-                <li><a href="/enjoy/reading">Reading</a></li>
-                <li><a href="/enjoy/music">Music</a></li>
-                <li><a href="/enjoy/movies">Movies</a></li>
-            </ul>
-        </li>
         <li><a href="/poems/">Poems</a></li>
-        <li><a class="external" href="http://blog.shengbin.me">Blog</a></li>
+        <li><a href="/cv/">CV</a></li>
     </ul>
     </div>
     <p>Welcome<script language="javascript"> var now = new Date(); 
