--- a/_layouts/app.html
+++ b/_layouts/app.html
@@ -49,7 +49,14 @@
 </div>
 
 <div class="main">
-{{ content }}
+  <div class="wrapper">
+    {{ content }}
+    <footer>
+      <div class="owner">
+      <p><a href="http://www.shengbin.me" class="avatar"><img src="http://www.shengbin.me/shengbin.png" width="48" height="48"/></a> <a href="http://www.shengbin.me">Shengbin Meng</a> maintains all of this. You can <a href="/pay">pay him some money.</a></p>
+      </div>
+    </footer>
+  </div>
 </div>
 
 <div class="footer">
