--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,18 +8,15 @@
 {% if page.description %}<meta name="description" content="{{ page.description }}">{% endif %}
 <link rel="shortcut icon" href="/shengbin.png">
 <link rel="stylesheet" type="text/css" href="/shengbin.css">
-<!-- for Google Analytics -->
-<script type="text/javascript">
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-30081581-1']);
-  _gaq.push(['_trackPageview']);
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QK8RQ27BP5"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-QK8RQ27BP5');
 </script>
-<!-- end for Google Analytics -->
 </head>
 
 <body>
